namespace Not_Applied;

public class ChemistryAudioBook : AudioBook
{
    public override string GetContent()
    {
        return "Chemistry book content: Organic Chemistry, Inorganic Chemistry, Physical Chemistry";
    }
}