namespace Not_Applied;

public class ChemistryDigitalBook : DigitalBook
{
    public override string GetContent()
    {
        return "Chemistry book content: Organic Chemistry, Inorganic Chemistry, Physical Chemistry";
    }
}