namespace Not_Applied;

public class ChemistryPrintBook : PrintBook
{
    public override string GetContent()
    {
        return "Chemistry book content: Organic Chemistry, Inorganic Chemistry, Physical Chemistry";
    }
}