namespace Not_Applied;

public interface IBook
{
    void Publish();
    string GetContent();
}