namespace Not_Applied;

public class MathAudioBook : AudioBook
{
    public override string GetContent()
    {
        return "Math book content: Algebra, Geometry, Calculus";
    }
}