namespace Not_Applied;

public class MathDigitalBook : DigitalBook
{
    public override string GetContent()
    {
        return "Math book content: Algebra, Geometry, Calculus";
    }
}