namespace Not_Applied;

public class MathPrintBook : PrintBook
{
    public override string GetContent()
    {
        return "Math book content: Algebra, Geometry, Calculus";
    }
}