namespace Not_Applied;

public abstract class PrintBookWithSavingToDatabase : PrintBook
{
    public abstract void Save();
}